# cpp_learning

./: CMakeLists.txt  README.md  TestClass.h  cpp_learning.qbs  main.cpp  type_traits.h  utils.cpp  utils.h
breaking_dependencies/: shapes_v1.cpp  type_erasure_shapes.h
cmake_learning/: CMakeLists.txt  main.cpp
cmake_learning/libs/dynamic_lib/: CMakeLists.txt  print.cpp  print.h
cmake_learning/libs/static_lib/: CMakeLists.txt
coroutines/: README.md  main.cpp
eliminate_virtual_functions/: binding_interfaces.h  eliminate_virtual_functions.cpp  owning_a_polymorphic_type.h  owning_polymorphic_types.h  storing_multiple_types.h
inject_dependencies/: inject_dependencies.h
software_design/: shapes_v1.cpp  type_erasure_shapes.h
software_design/adapter/: UML.puml
software_design/command_pattern/: Calculator.h  UML.puml  calculator_commands.h  main.cpp
software_design/visitor_pattern/: visitor.cpp  visitor.h  visitor.puml
template_metaprogramming/: concept_Addable.h  concept_Container.h  concept_SameAsAny.h  concept_addable.h  dependent_destructor.h  trait_List.h  trait_VectorXD_ArrayXD.h  trait_are_all_integral.h  trait_are_same.h  trait_arguments_count.h  trait_first_type.h  trait_is_class_or_union.h  trait_is_connectable.h  trait_is_one_of.h  trait_matrix.h  trait_type_list.h  traits.h
template_metaprogramming/STL/: trait_conditional.h  trait_integral_constant.h  trait_is_class.h  trait_is_null_ptr.h  trait_is_pointer.h  trait_is_same.h  trait_void_t.h
template_metaprogramming/practice_stl/: trait_add_pointer.h  trait_bool_constant.h  trait_conditional.h  trait_decay.h  trait_index_sequence.h  trait_integral_constant.h  trait_is_array.h  trait_is_class.h  trait_is_function.h  trait_is_null_ptr.h  trait_is_pointer.h  trait_is_same.h  trait_is_void.h  trait_nullptr_t.h  trait_rank.h  trait_remove_cv.h  trait_remove_extent.h  trait_remove_pointer.h  trait_remove_reference.h  trait_type_identity.h  trait_void_t.h
template_metaprogramming/practice_tuple/: TestClass.h  Tuple.h  about_performance.h  main.cpp  temp.h  test_utils_v1.h  test_utils_v2.h  traits.h
template_metaprogramming/practice_type_list/: trait_type_list.h  type_list.h
type_traits/: type_traits.h
utilities/: declare_enum.h  press_enter_to_continue.cpp
utilities/declare_enum/: declare_enum.h  (+1 more)
(+45 files in other folders)
